@@ -1,3 +1,8 @@
+2007-08-16  Karl Berry  <karl@gnu.org>
+
+	* makeinfo/lang.c (iso8859_2_map): include known HTML entities,
+	from the 88592.txt file in the GNU enscription distribution.
+
 2007-08-04  Juan Manuel Guerrero  <juan.guerrero@gmx.de>
 
 	* djgpp/config.bat: replace the string diffutil*.pot by
